SERVER-17206 capped collection performance tweaks

(cherry picked from commit 47eafb2a05f902ffd9df5324a4c3490eaa581842)